--- a/src/main/resources/templates/profiles_home.html
+++ b/src/main/resources/templates/profiles_home.html
@@ -17,7 +17,9 @@
 <div class="container">
     <div class="row mt-3">
         <div class="col-md-4">
-            <a th:href="@{/}" class="btn btn-info" role="button">Go back to the main page</a>
+            <form th:action="@{/logout}" method="post">
+                <button type="submit">Logout</button>
+            </form>
         </div>
     </div>
 </div>
