--- a/src/main/resources/templates/profiles_register.html
+++ b/src/main/resources/templates/profiles_register.html
@@ -18,7 +18,7 @@
 <div class="container">
     <div class="row mt-3">
         <div class="col-md-4">
-            <a th:href="@{/}" class="btn btn-info" role="button">Go back to the main page</a>
+            <a th:href="@{/profiles/home}" class="btn btn-info" role="button">Profile home</a>
         </div>
     </div>
 </div>
