--- a/src/main/resources/templates/tasks_create.html
+++ b/src/main/resources/templates/tasks_create.html
@@ -13,7 +13,7 @@
 <div class="container">
     <div class="row mt-3">
         <div class="col-md-4">
-            <a th:href="@{/}" class="btn btn-info" role="button">Go back to the main page</a>
+            <a th:href="@{/tasks-home}" class="btn btn-info" role="button">Task home</a>
         </div>
     </div>
 </div>
