--- a/src/main/resources/templates/tasks_list.html
+++ b/src/main/resources/templates/tasks_list.html
@@ -36,7 +36,7 @@
 <div class="container">
     <div class="row mt-3">
         <div class="col-md-4">
-            <a th:href="@{/tasks-home}" class="btn btn-info" role="button">Go back to the main page</a>
+            <a th:href="@{/tasks-home}" class="btn btn-info" role="button">Task home</a>
         </div>
     </div>
 </div>
@@ -65,7 +65,7 @@
 <!--        </td>-->
 <!--        <td th:text="${tasks.completedAt != null ? tasks.completedAt.format(T(java.time.format.DateTimeFormatter).ofPattern('dd MMMM yyyy HH:mm')) : null}"></td>-->
             <td>
-                <a th:href="@{/tasks/details}" class="btn btn-info" role="button">Details</a>
+                <a th:href="@{/tasks/details/{tasksId}(tasksId=${tasks.tasksId})}" class="btn btn-info" role="button">Details</a>
             </td>
     </tr>
     </tbody>
