--- a/src/main/resources/templates/tasks_details.html
+++ b/src/main/resources/templates/tasks_details.html
@@ -79,5 +79,9 @@
     </tbody>
 </table>
 
+<form th:action="@{/tasks/{tasksId}/delete(tasksId=${tasks.tasksId})}" method="post">
+    <input type="hidden" name="_method" value="delete" />
+    <button type="submit">Delete task</button>
+</form>
 </body>
 </html>
