--- a/src/main/resources/templates/tasks_home.html
+++ b/src/main/resources/templates/tasks_home.html
@@ -42,6 +42,13 @@
             <a th:href="@{/tasks/history}" class="btn btn-info" role="button">Task history</a>
         </div>
     </div>
+    <br>
+    <h3>Profile</h3>
+    <div class="row mt-3">
+        <div class="col-md-6">
+            <a th:href="@{/profiles/home}" class="btn btn-info" role="button">Profile</a>
+        </div>
+    </div>
 </div>
 </body>
 </html>
