Adding tests and readme file

--- a/src/main/resources/templates/tasks_history.html
+++ b/src/main/resources/templates/tasks_history.html
@@ -53,7 +53,7 @@
         <th>Title</th>
         <th>Description</th>
         <th>Reminder at</th>
-        <th>Status</th>
+        <th>Completed</th>
         <th>Completed at</th>
     </tr>
     </thead>
